--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_joystick: ^0.0.3
   flutter_riverpod: ^2.3.6
   go_router: ^7.1.1
 
